# s2t_metrics

./: README.md  main.py  pyproject.toml
s2t_metrics/: google_cloud.py  openai.py
